# marine_source_tracking

./: Dockerfile  README.md
dep_ros_pkgs/odom_to_tf_ros2/src/: odom_to_tf.cpp
experiments/a/dispersion/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_101.csv  output_102.csv  output_103.csv  output_104.csv  output_105.csv  output_106.csv  output_107.csv  output_108.csv  output_109.csv  output_11.csv  output_110.csv  output_111.csv  output_112.csv  output_113.csv  output_114.csv  output_115.csv  output_116.csv  output_117.csv  output_118.csv  output_119.csv  output_12.csv  output_120.csv  output_121.csv  output_122.csv  output_123.csv  output_124.csv  output_125.csv  output_126.csv  output_127.csv  output_128.csv  output_129.csv  output_13.csv  output_130.csv  output_131.csv  output_132.csv  output_133.csv  (+99 more)
experiments/a/st1/: ros_param.yaml  test_world.sdf
experiments/a/st2/: ros_param.yaml
experiments/a/waves/: model.sdf
experiments/b/dispersion/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_101.csv  output_102.csv  output_103.csv  output_104.csv  output_105.csv  output_106.csv  output_107.csv  output_108.csv  output_109.csv  output_11.csv  output_110.csv  output_111.csv  output_112.csv  output_113.csv  output_114.csv  output_115.csv  output_116.csv  output_117.csv  output_118.csv  output_119.csv  output_12.csv  output_120.csv  output_121.csv  output_122.csv  output_123.csv  output_124.csv  output_125.csv  output_126.csv  output_127.csv  output_128.csv  output_129.csv  output_13.csv  output_130.csv  output_131.csv  output_132.csv  output_133.csv  (+147 more)
experiments/b/st1/: ros_param.yaml
experiments/b/st2/: ros_param.yaml  test_world.sdf
experiments/b/waves/: model.sdf
experiments/c/dispersion/: output_0.csv  output_1.csv  output_10.csv  output_100.csv  output_101.csv  output_102.csv  output_103.csv  output_104.csv  output_105.csv  output_106.csv  output_107.csv  output_108.csv  output_109.csv  output_11.csv  output_110.csv  output_111.csv  output_112.csv  output_113.csv  output_114.csv  output_115.csv  output_116.csv  output_117.csv  output_118.csv  output_119.csv  output_12.csv  output_120.csv  output_121.csv  output_122.csv  output_123.csv  output_124.csv  output_125.csv  output_126.csv  output_127.csv  output_128.csv  output_129.csv  output_13.csv  output_130.csv  output_131.csv  output_132.csv  output_133.csv  (+147 more)
experiments/c/st1/: config.yaml  ros_param.yaml  test_world.sdf
experiments/c/st2/: config.yaml  ros_param.yaml  test_world.sdf
experiments/c/waves/: model.sdf
pollution_interfaces/: CMakeLists.txt  package.xml
pollution_interfaces/action/: SourceLocalization.action
pollution_interfaces/msg/: Probe.msg
pollution_ipp/: CMakeLists.txt  package.xml
pollution_ipp/cmake/: libigl.cmake
pollution_ipp/config/: prob_map.rviz
pollution_ipp/launch/: odometry_recorder.launch.py  source_loc.launch.py
pollution_ipp/src/: odometry_recorder.cpp  rviz_goal_pose.cpp  source_loc.cpp  source_loc.hpp  source_loc_client.cpp  source_loc_node.cpp
pollution_sim/: CMakeLists.txt  package.xml
pollution_sim/config/: ros_gz_bridge.yaml
pollution_sim/include/: rapidcsv.h
pollution_sim/launch/: sim_odom_tf.launch.py
pollution_sim/src/: pollution_sim_csv.cpp
