<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pollution_sim</name>
  <version>0.0.0</version>
  <description>The pollution_sim package</description>

  <maintainer email="author@author.ac.world">author</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>grid_map</depend>
  <depend>geometry2</depend>
  <depend>pollution_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>odom_to_tf_ros2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>python3-sphinx</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
